style - fix small overflow

--- a/components/pageVideo/style.css
+++ b/components/pageVideo/style.css
@@ -5,7 +5,7 @@
   align-items: center;
   width: 100%;
 
-  margin-top: 64px;
+  margin-top: 100px;
   overflow: visible;
 }
 .title-video {
